--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,13 @@ services:
       - '27017:27017'
     volumes:
       - dbdata6:/data/db
+  redis:
+    image: redis:latest
+    container_name: my-redis-container
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
 volumes:
   dbdata6:
+  redis-data:
