--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=Wishlist
 
 spring.data.mongodb.uri=mongodb://localhost:27017/wishlistdb
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
