--- a/src/main/resources/application-tests.properties
+++ b/src/main/resources/application-tests.properties
@@ -6,3 +6,4 @@ spring.redis.host=localhost
 spring.redis.port=6379
 spring.cache.redis.time-to-live=60000
 spring.cache.cache-names= wishlist-test
+spring.data.mongodb.auto-index-creation=true
