--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.data.mongodb.uri=mongodb://localhost:27017/wishlistdb
 spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
+spring.data.mongodb.auto-index-creation=true
