Add docker modifications, run.sh and prometheus.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.data.mongodb.auto-index-creation=true
+
+# Prometheus and actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
