--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 services:
   mongodb:
     image: mongo:6-jammy
+    container_name: mongodb
     ports:
       - '27017:27017'
     volumes:
@@ -13,6 +14,7 @@ services:
       - "6379:6379"
     volumes:
       - redis-data:/data
+
 volumes:
   dbdata6:
   redis-data:
