--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.data.mongodb.auto-index-creation=true
 # Prometheus and actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoint.health.show-details=always
