--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -5,4 +5,4 @@ scrape_configs:
   - job_name: 'spring-boot-app'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['app:8080']
+      - targets: ['localhost:8080']
